# AppliedAI

./: .gitignore  README.md
23-C-08_Weed/: PreProcessing Dataset 2.py
23-C-08_Weed/Data Preprocessing/: changeAnnotationClass.py
23-I-12_SysArch/Experiments/: camera_node.py  model.py  temp.py
23-I-12_SysArch/Experiments/Calibration Utilities/: camera.py  colorspace.py  roi.py
23-I-12_SysArch/Experiments/Conversion Scripts/: Onnx_TensorRT.py  TensorFlow_TensorRT.py
23-I-12_SysArch/Experiments/POC_test/src/cpp_test/: CMakeLists.txt  package.xml
23-I-12_SysArch/Experiments/POC_test/src/cpp_test/src/: cpp_pub.cpp  cpp_sub.cpp
23-I-12_SysArch/Experiments/Python POCs/: benchmarking.py
23-I-12_SysArch/Experiments/Zed Examples/: capture_example.py  depth_example.py  display_example.py  jetson_inference_example.py  object_detection_example.py  position_tracking_example.py  sensor_data_example.py
23-I-12_SysArch/Experiments/extermination_workspace/: camera_subscriber.cpp  camera_subscriber.py  camera_utilities.py  multithreading_test.py  recorder.py  snippets.py  (+3 more)
23-InternalTools/MildewBoundingBox/: mildewannotate.py
23-InternalTools/SAM-Auto-Annotation/: README.md  SAM Auto-Annotation Guide.ipynb  aademo-coco.sh  aademo.sh  autoannot.py  cocogen.py  ttsplit.py
23-M-10_GrapeLD/Blueberries/: README.md
23-M-10_GrapeLD/Workspace/: README.md  __main__.py  paths.txt  predict.ipynb  requirements.txt  similarity.ipynb  similarity.txt  testFile.py
24-M-13-Misc/: Readme.md
24-M-14-FPR/: .gitignore
24-M-14-FPR/jerome/: main.py  predictions.py  requirements.txt
(+106 files in other folders)
